# drf_p33_channels

./: .dockerignore  .env.example  .env.prod  .gitignore  Dockerfile  Makefile  TODO  docker-compose.yaml  pyproject.toml
apps/: admin.py  middlewares.py  models.py  urls.py  utils.py  views.py
apps/consumers/: __init__.py  base.py  chat_consumers.py
apps/fixtures/: chats.json  messages.json  users.json
apps/management/commands/: maker.py
apps/models/: __init__.py  base.py  chats.py  manager.py  users.py
apps/serializers/: __init__.py  chats.py  users.py
apps/tests/: test_chats.py  test_urls.py
apps/views/: __init__.py  chats.py  users.py
frontend/: Dockerfile  index.html  nginx.conf  register.html
frontend/css/: index_style.css  register_style.css
frontend/js/: index.js  register.js
root/: asgi.py  settings.py  urls.py
